<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XMPlayerdemo</string>

    <string name="filter_none">无</string>
    <string name="filter_beauty">磨皮美颜</string>
    <string name="filter_face_sticker">人脸贴纸</string>
    <string name="filter_beauty_optimization">美颜算法优化</string>
    <string name="filter_sketch">素描</string>
    <string name="filter_sepia">乌贼墨色</string>
    <string name="filter_invert">颜色反转</string>
    <string name="filter_vignette">虚光照</string>
    <string name="filter_laplacian">拉普拉斯</string>
    <string name="filter_glass_sphere">球形</string>
    <string name="filter_crayon">蜡笔</string>
    <string name="filter_mirror">镜像</string>
    <string name="filter_fission">分裂</string>
    <string name="filter_blinds">百叶窗</string>
    <string name="filter_fade_in_out">淡入淡出</string>

    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="dub">Dub</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>
    <string name="raw_preview">原声预览</string>
    <string name="clip_stream">Clip Stream</string>
    <string name="camera">Camera</string>
    <string name="post_process">pip recording</string>
    <string name="unit_test">Unit Test</string>
    <string name="dub_test">Dub Test</string>
    <string name="pip_test">Pip Test</string>
    <string name="concat_test">Concat Test</string>
    <string name="burn_subtitle_test">Burn SubTitle Test</string>
    <string name="pip_subtitle_test">Pip with SubTitle Test</string>
    <string name="hw_aac_encoder_test">HW AAC Encoder Test</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>

</resources>
