<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".menu_app">
    <item
        android:id="@+id/action_sample"
        android:title="@string/sample"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_recent"
        android:title="@string/recent"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_dub"
        android:title="@string/dub"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_unittest"
        android:title="@string/unit_test"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_camera"
        android:title="@string/camera"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_post_process"
        android:title="@string/post_process"
        app:showAsAction="ifRoom" />
</menu>